Fix whole card being misaligned

--- a/css/cardStyling.css
+++ b/css/cardStyling.css
@@ -243,7 +243,7 @@
 
 /*Pony & Start Cards*/
     .card.pony {
-        background-image:url('../resources/templates/BLEED-Blank-Pony-cropped.png');
+        /* background-image:url('../resources/templates/BLEED-Blank-Pony-cropped.png'); */
     }
     .card.pony .name, .card.pony .nameInput, .card.pony .effect {
         color:#462c89
